--- a/index.html
+++ b/index.html
@@ -270,6 +270,9 @@ setProgressBarValue(progressBar4, progressBarFill4, 50);
 setProgressBarValue(progressBar5, progressBarFill5, 45);
 
   </script>
+  <footer class="footer">
+    <p>&copy; 2024 Debraj Roy. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
