--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <a href="https://roydebraj2003.github.io/Blog" target="_blank">
-                <img src="./picture/pexels-picography-4458.jpg" class="d-block w-100" alt="...">
+                <img src="./pexels-picography-4458.jpg" class="d-block w-100" alt="...">
               </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
@@ -103,7 +103,7 @@
             </div>
             <div class="carousel-item">
               <a href="https://github.com/roydebraj2003" target="_blank">
-                <img src="./picture/pexels-mikael-blomkvist-6476587.jpg" class="d-block w-100" alt="...">
+                <img src="./pexels-mikael-blomkvist-6476587.jpg" class="d-block w-100" alt="...">
               </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
@@ -115,7 +115,7 @@
             </div>
             <div class="carousel-item">
               <a href="https://github.com/roydebraj2003" target="_blank">
-                <img src="./picture/pexels-romka- -2034373.jpg" class="d-block w-100" alt="...">
+                <img src="./pexels-romka- -2034373.jpg" class="d-block w-100" alt="...">
               </a>
               <div class="card-body text-center my-4">
                 <blockquote class="blockquote mb-0">
@@ -151,31 +151,31 @@
       <div class="col-md-2 my-5">
       </div>
       <div class="col-md-5 ">
-        <img src="./picture/1174949_js_react js_logo_react_react native_icon.png" class="img-fluid">
+        <img src="./1174949_js_react js_logo_react_react native_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar1">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill1"></div>
         </div>
-        <img src="./picture/4691303_mysql_icon.png" class="img-fluid">
+        <img src="./4691303_mysql_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar2">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill2"></div>
         </div>
-        <img src="./picture/1916016_git_logo_media_social_icon.png" class="img-fluid">
+        <img src="./1916016_git_logo_media_social_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar3">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill3"></div>
         </div>
-        <img src="./picture/4375017_js_logo_node_icon.png" class="img-fluid">
+        <img src="./4375017_js_logo_node_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar4">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill4"></div>
         </div>
-        <img src="./picture/4373213_js_logo_logos_icon.png" class="img-fluid">
+        <img src="./4373213_js_logo_logos_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar5">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
