--- a/index.html
+++ b/index.html
@@ -151,31 +151,31 @@
       <div class="col-md-2 my-5">
       </div>
       <div class="col-md-5 ">
-        <img src="./1174949_js_react js_logo_react_react native_icon.png" class="img-fluid">
+        <img src="/1174949_js_react js_logo_react_react native_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar1">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill1"></div>
         </div>
-        <img src="./4691303_mysql_icon.png" class="img-fluid">
+        <img src="/4691303_mysql_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar2">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill2"></div>
         </div>
-        <img src="./1916016_git_logo_media_social_icon.png" class="img-fluid">
+        <img src="/1916016_git_logo_media_social_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar3">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill3"></div>
         </div>
-        <img src="./4375017_js_logo_node_icon.png" class="img-fluid">
+        <img src="/4375017_js_logo_node_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar4">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
             id="myProgressBarFill4"></div>
         </div>
-        <img src="./4373213_js_logo_logos_icon.png" class="img-fluid">
+        <img src="/4373213_js_logo_logos_icon.png" class="img-fluid">
         <div class="progress my-2" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
           aria-valuemin="0" aria-valuemax="100" id="myProgressBar5">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width: 75%"
